# rego

./: .gitignore  .rvmrc  CMakeLists.txt  Gemfile  README.md
api/fi/iki/halo/Rego1/: Sensors.interface.yaml
cmake/modules/: FindGMock.cmake  FindGTest.cmake  GMockConfig.cmake  GTestConfig.cmake
features/: CMakeLists.txt
features/procotol/: marshalling.feature  requests.feature
features/regoctl/: help.feature  reading_register.feature  scan_registers.feature  writing_register.feature
features/regod/: reading_sensors.feature
features/steps/: CMakeLists.txt  reading_register_steps.rb  steps.cpp
features/support/: env.rb
ots/: CMakeLists.txt
ots/cucumber-cpp/: CMakeLists.txt
ots/cucumber-cpp/cucumber-cpp/: run-tests.sh
ots/cucumber-cpp/cucumber-cpp/examples/Calc/: CMakeLists.txt
ots/cucumber-cpp/cucumber-cpp/examples/FeatureShowcase/: CMakeLists.txt
ots/cucumber-cpp/cucumber-cpp/include/cucumber-cpp/internal/: RegistrationMacros.hpp
ots/cucumber-cpp/cucumber-cpp/include/cucumber-cpp/internal/drivers/: GTestDriver.hpp
ots/cucumber-cpp/cucumber-cpp/include/cucumber-cpp/internal/step/: StepManager.hpp
ots/cucumber-cpp/cucumber-cpp/tests/: CMakeLists.txt
ots/gmock/: CMakeLists.txt
ots/gmock/gmock-1.7.0/gtest/include/gtest/: gtest.h
ots/gmock/gmock-1.7.0/gtest/src/: gtest.cc
ots/gmock/gmock-1.7.0/include/gmock/: gmock-matchers.h  gmock-more-actions.h
src/: CMakeLists.txt
src/marshaller/: CMakeLists.txt  marshaller.cpp
src/protocol/: CMakeLists.txt  byte_sequence_t.hpp  composer.cpp  composer.hpp  marshaller.cpp  marshaller.hpp  rego_638.cpp  rego_638.hpp
src/regoctl/: CMakeLists.txt  regoctl.cpp
src/regod/: CMakeLists.txt  regod.cpp  sensors.cpp  sensors.hpp
src/regod/fi/iki/halo/Rego1/Sensors/: server.cpp  server.hpp
src/util/: CMakeLists.txt  cli.cpp  cli.hpp  helpers.cpp  helpers.hpp  serial.cpp  serial.hpp
tests/: CMakeLists.txt
tests/protocol/: test_composer.cpp
